--- a/Pagina_Recetas/index.html
+++ b/Pagina_Recetas/index.html
@@ -3,75 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./normalize.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Pagina de Recetas</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Simple Omelette Recipe
+  <picture class="container">
+      <img src="./assets/images/image-omelette.jpeg" alt="">
+  </picture>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+  <h1 class="titulo-principal">Simple Omelette Recipe</h1>
 
-  Preparation time
+  <p class="parrafo">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+  <div class="container container-ingrediente">
+    <div class="titulo-ingrediente"></div>
+    <h3 class="subtitulo-ingredientes">Preparation time</h3>
+    <div class="listado">
+      <ul>
+        <li><span>Total: </span>Approximately 10 minutes</li>
+      </ul>
+      <ul>
+        <li><span>Preparation: </span>5 minutes</li>
+      </ul>
+      <ul>
+        <li><span>Cooking: </span>5 minutes</li>
+      </ul>
+    </div>
+  </div>
 
-  Ingredients
+  <div class="container">
+    <div class="ingredientes">
+      <h2>Ingredients</h2>
+    </div>
+    <div class="lista-ingredientes">
+      <ul>
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </div>
+  </div>
+  <div class="container separador"></div>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+  <div class="container">
+    <div class="ingredientes">
+      <h2>Ingredients</h2>
+    </div>
+    <div class="lista-ingredientes">
+      <ol>
+        <li> <span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-  Instructions
+        <li> <span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
+        <li> <span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+        <li> <span>Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
+        <li> <span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
+        <li> <span> Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </div>
+  </div>
+  <div class="container separador"></div>
 
-  Enjoy: Serve hot, with additional salt and pepper if needed.
+  <div class="container">
+    <div class="ingredientes">
+      <h2> Nutrition</h2>
+      <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
+      <table class="rwd-table">
+        <tr class="tr-table">
+          <td>Calories</td>
+          <td class="valor">277kcal</td>
+        </tr>
+        <tr  class="tr-table">
+          <td>Carbs</td>
+          <td class="valor">0g</td>
+        </tr>
+        <tr  class="tr-table">
+          <td>Protein</td>
+          <td class="valor">20g</td>
+        </tr>
+        <tr  class="tr-table">
+          <td>Fat</td>
+          <td class="valor">22g</td>
+        </tr>
+      </table>
+      
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Carlos Martinez</a>.
   </div>
 </body>
 </html>
